Customer changes commit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,6 +28,7 @@
         <a  routerLink="customer-details" class="nav-item nav-link">Personal Details</a>
       </div>
     </div>
+    <button class="btn btn-outline-primary my-2 my-sm-0" style="margin: 7px" (click)="signUp()">Sign Up</button>
     <button class="btn btn-outline-primary my-2 my-sm-0" (click)="logout()">Logout</button>
   </nav>
   <router-outlet></router-outlet>
