--- a/src/app/loan/loan.component.html
+++ b/src/app/loan/loan.component.html
@@ -98,7 +98,7 @@
                     </div>
                     <div class="form-group">
                         <button class="btn btn-primary" [disabled]="loanForm.invalid" style="margin: 8px;">Apply</button>
-                        <button class="btn btn-secondary" type="reset" (click)="onReset()">Reset</button>
+                        <!-- <button class="btn btn-secondary" type="reset" (click)="onReset()">Reset</button> -->
                     </div>
                 </form>
             </div>
