validation changes commit.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,7 @@
-<table class="table table-striped">
+<div class="card m-3">
+    <h5 class="card-header">Loan Details</h5>
+    <div class="card-body">
+      <table class="table table-striped">
   <thead>
     <tr>
       <th scope="col">No</th>
@@ -31,3 +34,5 @@
     </tr>
   </tbody>
 </table>
+</div>
+</div>
