Fix Reload issue .

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
       <th scope="col">Loan Amount</th>
       <th scope="col">Start Date</th>
       <th scope="col">Maturity Date</th>
-      <th scope="col">Loan Duration (in months)</th>
+      <th scope="col">Loan Duration (in years)</th>
       <th scope="col">Payment Frequency</th>
       <th scope="col">Payment Schedule</th>
       <th scope="col">Payment Term</th>
