--- a/src/app/loan/loan.component.html
+++ b/src/app/loan/loan.component.html
@@ -100,6 +100,12 @@
             <div class="form-group">
                 <button class="btn btn-primary" style="margin: 8px;">Apply</button>
             </div>
+            <div #alert class="alert alert-success alert-dismissible fade" role="alert">
+                <button type="button" class="close" aria-label="Close" (click)="closeAlert()">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+                Your Loan has been successfully applied!
+              </div>
         </form>
     </div>
 </div>
