Payment fix commit

--- a/src/app/payment-schedule/payment-schedule.component.html
+++ b/src/app/payment-schedule/payment-schedule.component.html
@@ -15,13 +15,13 @@
   <tbody>
   <tr *ngFor="let payment of payments; index as i">
     <th scope="row">{{ i + 1 }}</th>
+    <td style="display:none;">{{ payment.paymentId}}</td>
     <td>{{ payment.paymentDate  }}</td>
     <td>{{ payment.principal | number }}</td>
     <td>{{ payment.projectedInterest | number }}</td>
-    <!-- <td>{{ payment.paymentStatus}}</td>   class="badge badge-warning" -->
-    
     <td> <span [ngClass]="getClass(payment.paymentStatus)" >{{ payment.paymentStatus}}</span> </td>
     <td>{{ payment.paymentAmount | number }}</td>
+    <td><button class="btn btn-primary"  (click)="changePaymentStatus($event,payment.paymentId)">Pay</button></td>
   </tr>
   </tbody>
 </table>
